force-app/main/default/objects/iManage_Emails__c/iManage_Emails__c.object-meta.xml
<CustomObject>
    <label>iManage Emails</label>
    <nameField>
        <displayFormat>ME-{00000}</displayFormat>
        <label>iManage Emails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>