force-app/main/default/objects/iManage_Emails__c/fields/DocketActityIds__c.field-meta.xml
<CustomField>
    <fullName>DocketActityIds__c</fullName>
    <label>DocketActityIds</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>