force-app/main/default/objects/iManage_Emails__c/fields/iManageDocumentIds__c.field-meta.xml
<CustomField>
    <fullName>iManageDocumentIds__c</fullName>
    <label>iManageDocumentIds</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>